--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="content">
                             <div class="year">October 2023 - now<i class='bx bxs-calendar'></i></div>
                             <h3><b>Google Developer Student UPI</b></h3>
-                            <p><b></b>Web Developer Member</b></p>
+                            <p><b>Web Developer Member</b></p>
                             <p>Become a member of Google Developer Student UPI who has a specialization in the Web
                                 Developer section</p>
                         </div>
@@ -127,7 +127,7 @@
                         <div class="content">
                             <div class="year">February 2024 - now<i class='bx bxs-calendar'></i></div>
                             <h3>HIMA PSTI</h3>
-                            <p><b></b>Education Department Staff</b></p>
+                            <p><b>Education Department Staff</b></p>
                             <p>Realizing and improving the scientific reasoning and technological knowledge abilities of
                                 Information Technology and System Education students</p>
                         </div>
