--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <div class="organization-content">
                         <div class="content">
                             <div class="year">October 2023 - now<i class='bx bxs-calendar'></i></div>
-                            <h3><b>Google Developer Student UPI</b></h3>
-                            <p><b>Web Developer Member</b></p>
+                            <h3><b>Google Developer Student Clubs UPI</b></h3>
+                            <p><b>Web Development Member</b></p>
                             <p>Become a member of Google Developer Student UPI who has a specialization in the Web
                                 Developer section</p>
                         </div>
